# CPU_Emulator

./: .gitignore  CMakeLists.txt  README.md
include/: main_6502.hpp
src/: 6502LoadRegisterTests.cpp  6502StoreRegisterTests.cpp  6502Test_main.cpp  6502Tests.cpp  main.cpp  main_6502.cpp
